--- a/package.json
+++ b/package.json
@@ -8,18 +8,45 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "schema": "prisma/schema.prisma"
+  },
   "dependencies": {
+    "@clerk/nextjs": "^4.25.6",
+    "@hookform/resolvers": "^3.3.2",
+    "@prisma/client": "^5.5.2",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.8.7",
     "@types/react": "18.2.30",
     "@types/react-dom": "18.2.14",
+    "@uploadthing/react": "^5.7.0",
     "autoprefixer": "10.4.16",
+    "axios": "^1.5.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "cmdk": "^0.2.0",
     "eslint": "8.51.0",
     "eslint-config-next": "13.5.6",
+    "lib-utils-ts": "^2.0.4-stable",
+    "lucide-react": "^0.288.0",
     "next": "13.5.6",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.47.0",
+    "react-hot-toast": "^2.4.1",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "5.2.2",
+    "uploadthing": "^5.7.2",
+    "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "prisma": "^5.5.2"
   }
 }
